--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD de Clientes</title>
 	
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" 
+		  rel="stylesheet" 
+		  integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+		  crossorigin="anonymous">
 </head>
 <body>
     <header class="text-bg-dark">
@@ -17,7 +20,7 @@
 	<main class="container my-3">
 		<section class="d-flex flex-column gap-3">
 			<section class="d-flex justify-content-end align-items-center">
-				<a href="#" class="btn btn-primary">+ Agregar producto</a>
+				<a th:href="@{/crear}" class="btn btn-primary">+ Agregar producto</a>
 			</section>
 			<section class="table-responsive">
 				<table class="table table-hover table-striped w-100">
@@ -42,6 +45,9 @@
 		</section>
 	</main>
 	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" 
+			integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
+			crossorigin="anonymous">
+	</script>
 </body>
 </html>
