Implementar mensajería flash para enviar mensajes al frontend

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
 <body>
     <section th:insert="~{layout/layout :: navbar}"></section>
 	<section th:insert="~{layout/layout :: header}"></section>
+	<section th:insert="~{layout/layout :: errores}"></section>
 	
 	<main class="container my-3">
 		<section class="d-flex flex-column gap-3">
