--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 	<main class="container my-3">
 		<section class="d-flex flex-column gap-3">
 			<section class="d-flex justify-content-end align-items-center">
-				<a th:href="@{/crear}" class="btn btn-primary">+ Agregar producto</a>
+				<a th:href="@{/crear}" class="btn btn-primary">+ Agregar cliente</a>
 			</section>
 			
 			<section class="table-responsive">
