--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 							<th>Apellido</th>
 							<th>Email</th>
 							<th>Fecha de creación</th>
-							<th colspan="2">Acciones</th>
+							<th colspan="3">Acciones</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -29,6 +29,9 @@
 							<td th:text="${cliente.apellido}"></td>
 							<td th:text="${cliente.email}"></td>
 							<td th:text="${cliente.fechaCreacion}"></td>
+							<td>
+								<a th:href="@{/detalle/} + ${cliente.id}" class="btn btn-primary">Ver detalle</a>
+							</td>
 							<td>
 								<a th:href="@{/editar/} + ${cliente.id}" class="btn btn-warning">Editar cliente</a>
 							</td>
