Pequeño fix en el mensaje del botón "Agregar" del formulario de clientes

--- a/src/main/resources/templates/clienteForm.html
+++ b/src/main/resources/templates/clienteForm.html
@@ -27,7 +27,7 @@
 				<input type="file" name="file" id="file" class="form-control" />
 				<!-- <span th:if="${#fields.hasErrors('foto')}" th:errors="*{foto}" class="text-danger"></span> -->
 			</section>
-			<input type="submit" value="Agregar" class="btn btn-primary" />
+			<input type="submit" th:value="${(cliente.id != null && cliente.id > 0) ? 'Editar' : 'Agregar'}" class="btn btn-primary" />
 		</form>
 	</main>
 	
