Agregar detalle de las facturas asociadas al cliente en su detalle

--- a/src/main/resources/templates/detalle.html
+++ b/src/main/resources/templates/detalle.html
@@ -23,6 +23,33 @@
                 <a th:href="@{/listar}" class="btn btn-secondary mt-3">Volver a la lista</a>
             </section>
         </section>
+		
+		<section class="card table-responsive mt-4">
+            <section class="card-header">
+                <h2>Facturas del cliente</h2>
+            </section>
+			<section class="px-2">
+				<p class="alert alert-warning my-2" th:if="${#lists.isEmpty(cliente.facturas)}" th:text="'No hay facturas asignadas para este cliente'"></p>
+				<table class="table table-striped table-hover my-2" th:if="${not #lists.isEmpty(cliente.facturas)}">
+					<thead>
+						<tr>
+							<th>Número de factura</th>
+							<th>Descripción</th>
+							<th>Fecha</th>
+							<th>Total</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="factura : ${cliente.facturas}">
+	                        <td th:text="${factura.id}"></td>
+	                        <td th:text="${factura.descripcion}"></td>
+	                        <td th:text="${factura.fecha}"></td>
+	                        <td th:text="${factura.total}"></td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
+		</section>
 	</main>
 	
 	<section th:insert="~{layout/layout :: footer}"></section>
