--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -8,7 +8,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" 
 		  rel="stylesheet" 
 		  integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-		  crossorigin="anonymous">
+		  crossorigin="anonymous" />
+	<link th:href="@{/js/jquery-ui.min.css}"
+		  rel="stylesheet" />
 </head>
 <body>
 	<nav class="navbar bg-dark border-bottom border-body navbar-expand-lg" data-bs-theme="dark" th:fragment="navbar">
@@ -44,10 +46,12 @@
 	</footer>
 	
 	<section th:fragment="scripts">
+		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" 
 				integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
 				crossorigin="anonymous">
 		</script>
+		<script th:src="@{/js/jquery-ui.min.js}"></script>
 	</section>
 </body>
 </html>
