Agregar botón para eliminar items de la factura

--- a/src/main/resources/templates/factura/autocompletado-productos.html
+++ b/src/main/resources/templates/factura/autocompletado-productos.html
@@ -57,6 +57,9 @@
 									
 				$("#cantidad_" + id).val(cantidad);
 				this.calcularImporte(id, precio, cantidad);
+            },
+			eliminarProducto: function(id) {
+                $("#row_" + id).remove();
             }
 		}
 	</script>
