--- a/src/main/resources/templates/factura/facturaForm.html
+++ b/src/main/resources/templates/factura/facturaForm.html
@@ -35,6 +35,7 @@
                         <th>Precio</th>
                         <th>Cantidad</th>
 						<th>Subtotal</th>
+						<th>Eliminar</th>
 					</tr>
 				</thead>
 				<tbody>
