--- a/src/main/resources/templates/factura/plantilla-items.html
+++ b/src/main/resources/templates/factura/plantilla-items.html
@@ -15,6 +15,9 @@
 				<td>
 					<span id="total-importe-{ID}">0</span>
 				</td>
+				<td>
+					<a href="#" class="btn btn-sm btn-danger" onclick="itemsHelper.eliminarProducto({ID});">Eliminar</a>
+				</td>
 			</tr>
 		</tbody>
 	</table>
