--- a/src/main/resources/templates/factura/facturaForm.html
+++ b/src/main/resources/templates/factura/facturaForm.html
@@ -4,21 +4,22 @@
 <body>
 	<section th:replace="~{layout/layout :: navbar}"></section>
 	<section th:replace="~{layout/layout :: header}"></section>
+	<section th:insert="~{layout/layout :: errores}"></section>
 	
 	<main class="container mt-3">
-		<form id="form-factura" th:action="@{/factura/guardar/}" th:object="${factura}" method="POST">
+		<form id="form-factura" th:action="@{/factura/guardar}" th:object="${factura}" method="POST">
 			<p class="alert alert-info mb-4">Cliente: <strong th:text="${factura.cliente.nombre} + ' ' + ${factura.cliente.apellido}"></strong></p>
 			
             <section class="mb-3">
                 <label for="descripcion" class="form-label">Descripción:</label>
-                <input th:field="*{descripcion}" class="form-control" />
-                <!--<span th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}" class="text-danger"></span>-->
+                <input th:field="*{descripcion}" class="form-control" required maxlength="200" />
+                <span th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}" class="text-danger"></span>
             </section>
 			
 			<section class="mb-3">
                 <label for="observacion" class="form-label">Observaciones:</label>
-                <textarea th:field="*{observacion}" class="form-control"></textarea>
-                <!--<span th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}" class="text-danger"></span>-->
+                <textarea th:field="*{observacion}" class="form-control" maxlength="200"></textarea>
+                <span th:if="${#fields.hasErrors('observacion')}" th:errors="*{observacion}" class="text-danger"></span>
             </section>
             
            <section class="mb-3">
