--- a/src/main/resources/templates/detalle.html
+++ b/src/main/resources/templates/detalle.html
@@ -39,7 +39,7 @@
 							<th>Número de factura</th>
 							<th>Descripción</th>
 							<th>Fecha</th>
-							<th>Total</th>
+							<th>Acciones</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -47,7 +47,9 @@
 	                        <td th:text="${factura.id}"></td>
 	                        <td th:text="${factura.descripcion}"></td>
 	                        <td th:text="${factura.fechaCreacion}"></td>
-	                        <td th:text="${factura.total}"></td>
+							<td>
+								<a th:href="@{/factura/detalle/} + ${factura.id}" class="btn btn-info btn-sm">Ver detalle</a>
+							</td>
 						</tr>
 					</tbody>
 				</table>
