--- a/src/main/resources/templates/detalle.html
+++ b/src/main/resources/templates/detalle.html
@@ -11,35 +11,35 @@
                 <h2 th:text="${tituloPagina}"></h2>
             </section>
             <section class="card-body">
-                <p><strong>Nombre:</strong> <span th:text="${cliente.nombre}"></span></p>
-                <p><strong>Apellido:</strong> <span th:text="${cliente.apellido}"></span></p>
-                <p><strong>Email:</strong> <span th:text="${cliente.email}"></span></p>
-                <p><strong>Fecha de creación:</strong> <span th:text="${cliente.fechaCreacion}"></span></p>
+                <p><strong th:text="#{Text.cliente.nombre}">Nombre</strong>: <span th:text="${cliente.nombre}"></span></p>
+                <p><strong th:text="#{Text.cliente.apellido}">Apellido:</strong>: <span th:text="${cliente.apellido}"></span></p>
+                <p><strong th:text="#{Text.cliente.email}">Email:</strong>: <span th:text="${cliente.email}"></span></p>
+                <p><strong th:text="#{Text.cliente.fechaCreacion}">Fecha de creación:</strong>: <span th:text="${cliente.fechaCreacion}"></span></p>
 				<section th:if="${cliente.foto != null && #strings.length(cliente.foto) > 0}" class="d-flex align-items-start gap-3">
-					<p><strong>Foto:</strong></p>
+					<p><strong th:text="#{Text.cliente.foto}">Foto</strong>:</p>
 					<img class="img-thumbnail rounded float-left" style="max-width: 200px;" th:src="@{/uploads/} + ${cliente.foto}" th:alt="'Foto de perfil del cliente ' + ${cliente.nombre}"/>
 				</section>
                 
-                <a th:href="@{/listar}" class="btn btn-secondary mt-3">Volver a la lista</a>
+                <a th:href="@{/listar}" class="btn btn-secondary mt-3" th:text="#{Text.cliente.listar.btn}">Volver a la lista</a>
             </section>
         </section>
 		
 		<section class="card mt-4">
             <section class="card-header">
-                <h2>Facturas del cliente</h2>
+                <h2 th:text="#{Text.factura.listar.titulo}">Facturas del cliente</h2>
             </section>
-			<section class="d-flex flex-column align-items-end gap-2 p-3 table-responsive">
-				<p th:if="${#lists.isEmpty(cliente.facturas)}" class="alert alert-warning mb-0 w-100">No hay facturas asignadas para este cliente</p>
+			<section class="d-flex flex-column gap-2 p-3 table-responsive">
+				<p th:if="${#lists.isEmpty(cliente.facturas)}" th:text="#{Text.factura.error.sinFacturas}" class="alert alert-warning mb-0 w-100">No hay facturas asignadas para este cliente</p>
 				
-				<a sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-primary" th:href="@{/factura/crear/} + ${cliente.id}">+ Crear nueva factura</a>
+				<a sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-primary" th:href="@{/factura/crear/} + ${cliente.id}" th:text="#{Text.factura.crud.crear}">+ Crear nueva factura</a>
 				
 				<table th:if="${not #lists.isEmpty(cliente.facturas)}" class="table table-striped table-hover my-2 w-100 text-center">
 					<thead>
 						<tr>
-							<th>Número de factura</th>
-							<th>Descripción</th>
-							<th>Fecha</th>
-							<th sec:authorize="hasRole('ROLE_ADMIN')">Acciones</th>
+							<th th:text="#{Text.factura.numero}">Número de factura</th>
+							<th th:text="#{Text.factura.descripcion}">Descripción</th>
+							<th th:text="#{Text.factura.fechaCreacion}">Fecha</th>
+							<th th:text="#{Text.general.acciones}" sec:authorize="hasRole('ROLE_ADMIN')">Acciones</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -48,8 +48,8 @@
 	                        <td th:text="${factura.descripcion}"></td>
 	                        <td th:text="${factura.fechaCreacion}"></td>
 							<td sec:authorize="hasRole('ROLE_ADMIN')">
-								<a th:href="@{/factura/detalle/} + ${factura.id}" class="btn btn-info btn-sm">Ver detalle</a>
-								<a th:href="@{/factura/eliminar/} + ${factura.id}" class="btn btn-danger btn-sm" onclick="return confirm('Está seguro que desea eliminar la factura?');">Eliminar factura</a>
+								<a th:href="@{/factura/detalle/} + ${factura.id}" class="btn btn-info btn-sm" th:text="#{Text.general.detalle}">Ver detalle</a>
+								<a th:href="@{/factura/eliminar/} + ${factura.id}" class="btn btn-danger btn-sm" onclick="return confirm('Está seguro que desea eliminar la factura?');" th:text="#{Text.crud.eliminar}">Eliminar factura</a>
 							</td>
 						</tr>
 					</tbody>
